fixed syntax and started fixing photo label error

--- a/portfolio.html
+++ b/portfolio.html
@@ -43,49 +43,46 @@
         <div class="row" id="outerbody">
             <div class="col-lg-12 col-md-12 col-sm-12" id="main-box">
                 <div class="row" id="title-row">
-                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bg-white">
+                    <div class="col-lg-12 col-md-12 col-sm-12 bg-white">
                         <br>
                         <h1>Portfolio</h1>
                         <hr>
                     </div>
                 </div>
                 <div class="row" id="body-row">
-                    <div class="col-lg col-md col-sm col-xs bg-white">
+                    <div class="col-lg col-md col-sm bg-white">
                         <div class="row" id="photo-row">
                             <div class="col-md-4 offset-xl-1 col-xl-2 text-center" id="imagecontainer1">
-                                <img src="http://lorempixel.com/output/fashion-q-c-200-200-5.jpg" class="img-fluid"
+                                <img src="http://lorempixel.com/output/fashion-q-c-200-200-5.jpg" class="img-fluid" id="img-holder"
                                     alt="Responsive image">
-                                <div class="caption" id="imgcap1">
+                                <div class="caption">
                                     RPG Game
+                                    </RPG>
                                 </div>
                             </div>
                             <div class="col-md-4 col-xl-2 text-center" id="imagecontainer2">
-                                <div class="row">
-                                    <div class="offset-sm-2 col-sm-8">
-                                        <img src="http://lorempixel.com/output/fashion-q-c-200-200-5.jpg"
-                                            class="img-responsive" alt="Responsive image">
-                                        <div class="caption">
-                                            Trivia Game
-                                        </div>
-                                    </div>
+                                <img src="http://lorempixel.com/output/fashion-q-c-200-200-5.jpg" class="img-fluid" id="img-holder"
+                                    alt="Responsive image">
+                                <div class="caption">
+                                    Trivia Game
                                 </div>
                             </div>
                             <div class="col-md-4 col-xl-2 text-center" id="imagecontainer3">
-                                <img src="http://lorempixel.com/output/fashion-q-c-200-200-5.jpg" class="img-fluid"
+                                <img src="http://lorempixel.com/output/fashion-q-c-200-200-5.jpg" class="img-fluid" id="img-holder"
                                     alt="Responsive image">
-                                <div class="caption">
+                                <div class="caption inline-block">
                                     Rock Paper Scissors
                                 </div>
                             </div>
                             <div class="col-md-4 col-xl-2 text-center" id="imagecontainer4">
-                                <img src="http://lorempixel.com/output/fashion-q-c-200-200-5.jpg" class="img-fluid"
+                                <img src="http://lorempixel.com/output/fashion-q-c-200-200-5.jpg" class="img-fluid" id="img-holder"
                                     alt="Responsive image">
                                 <div class="caption">
                                     Rutgers Info Widget
                                 </div>
                             </div>
                             <div class="col-md-4 col-xl-2 text-center" id="imagecontainer5">
-                                <img src="http://lorempixel.com/output/fashion-q-c-200-200-5.jpg" class="img-fluid"
+                                <img src="http://lorempixel.com/output/fashion-q-c-200-200-5.jpg" class="img-fluid" id="img-holder"
                                     alt="Responsive image">
                                 <div class="caption">
                                     RPG Game 2
