switched img and text into a card and inserted into bootstraps

--- a/portfolio.html
+++ b/portfolio.html
@@ -53,39 +53,48 @@
                     <div class="col-lg col-md col-sm bg-white">
                         <div class="row" id="photo-row">
                             <div class="col-md-4 offset-xl-1 col-xl-2 text-center" id="imagecontainer1">
-                                <img src="http://lorempixel.com/output/fashion-q-c-200-200-5.jpg" class="img-fluid" id="img-holder"
-                                    alt="Responsive image">
-                                <div class="caption">
-                                    RPG Game
-                                    </RPG>
+                                <div class="card md-dark text-white">
+                                    <img class="card-img" src="http://lorempixel.com/output/fashion-q-c-200-200-5.jpg"
+                                        alt="Card image">
+                                    <div class="card-img-overlay">
+                                        <h5 class="card-title">RPG Game</h5>
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-md-4 col-xl-2 text-center" id="imagecontainer2">
-                                <img src="http://lorempixel.com/output/fashion-q-c-200-200-5.jpg" class="img-fluid" id="img-holder"
-                                    alt="Responsive image">
-                                <div class="caption">
-                                    Trivia Game
+                                <div class="card md-dark text-white">
+                                    <img class="card-img" src="http://lorempixel.com/output/fashion-q-c-200-200-5.jpg"
+                                        alt="Card image">
+                                    <div class="card-img-overlay">
+                                        <h5 class="card-title">RPG Game</h5>
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-md-4 col-xl-2 text-center" id="imagecontainer3">
-                                <img src="http://lorempixel.com/output/fashion-q-c-200-200-5.jpg" class="img-fluid" id="img-holder"
-                                    alt="Responsive image">
-                                <div class="caption inline-block">
-                                    Rock Paper Scissors
+                                <div class="card md-dark text-white">
+                                    <img class="card-img" src="http://lorempixel.com/output/fashion-q-c-200-200-5.jpg"
+                                        alt="Card image">
+                                    <div class="card-img-overlay">
+                                        <h5 class="card-title">RPG Game</h5>
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-md-4 col-xl-2 text-center" id="imagecontainer4">
-                                <img src="http://lorempixel.com/output/fashion-q-c-200-200-5.jpg" class="img-fluid" id="img-holder"
-                                    alt="Responsive image">
-                                <div class="caption">
-                                    Rutgers Info Widget
+                                <div class="card md-dark text-white">
+                                    <img class="card-img" src="http://lorempixel.com/output/fashion-q-c-200-200-5.jpg"
+                                        alt="Card image">
+                                    <div class="card-img-overlay">
+                                        <h5 class="card-title">RPG Game</h5>
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-md-4 col-xl-2 text-center" id="imagecontainer5">
-                                <img src="http://lorempixel.com/output/fashion-q-c-200-200-5.jpg" class="img-fluid" id="img-holder"
-                                    alt="Responsive image">
-                                <div class="caption">
-                                    RPG Game 2
+                                <div class="card md-dark text-white">
+                                    <img class="card-img" src="http://lorempixel.com/output/fashion-q-c-200-200-5.jpg"
+                                        alt="Card image">
+                                    <div class="card-img-overlay">
+                                        <h5 class="card-title">RPG Game</h5>
+                                    </div>
                                 </div>
                             </div>
                         </div>
