--- a/portfolio.html
+++ b/portfolio.html
@@ -22,14 +22,14 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">About<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="https://evanjcleary.github.io/Bootstrap-Portfolio/index">About<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Portfolio</a>
+                    <a class="nav-link" href="https://evanjcleary.github.io/Bootstrap-Portfolio/portfolio">Portfolio</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Contact</a>
+                    <a class="nav-link" href="https://evanjcleary.github.io/Bootstrap-Portfolio/contact" tabindex="-1" aria-disabled="true">Contact</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
