--- a/portfolio.html
+++ b/portfolio.html
@@ -52,7 +52,7 @@
                 <div class="row" id="body-row">
                     <div class="col-lg col-md col-sm bg-white">
                         <div class="row" id="photo-row">
-                            <div class="col-md-4 offset-xl-1 col-xl-2 text-center" id="imagecontainer1">
+                            <div class="col-md-4 col-xl-4 text-center" id="imagecontainer1">
                                 <div class="card md-dark text-white">
                                     <img class="card-img" src="http://lorempixel.com/output/fashion-q-c-200-200-5.jpg"
                                         alt="Card image">
@@ -61,39 +61,39 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-4 col-xl-2 text-center" id="imagecontainer2">
+                            <div class="col-md-4 col-xl-4 text-center" id="imagecontainer2">
                                 <div class="card md-dark text-white">
-                                    <img class="card-img" src="http://lorempixel.com/output/fashion-q-c-200-200-5.jpg"
+                                    <img class="card-img" src="http://lorempixel.com/output/technics-q-c-200-200-7.jpg"
                                         alt="Card image">
                                     <div class="card-img-overlay">
-                                        <h5 class="card-title">RPG Game</h5>
+                                        <h5 class="card-title">Trivia Game</h5>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-4 col-xl-2 text-center" id="imagecontainer3">
+                            <div class="col-md-4 col-xl-4 text-center" id="imagecontainer3">
                                 <div class="card md-dark text-white">
-                                    <img class="card-img" src="http://lorempixel.com/output/fashion-q-c-200-200-5.jpg"
+                                    <img class="card-img" src="http://lorempixel.com/output/animals-q-c-200-200-9.jpg"
                                         alt="Card image">
                                     <div class="card-img-overlay">
-                                        <h5 class="card-title">RPG Game</h5>
+                                        <h5 class="card-title">Rock Paper Scissors</h5>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-4 col-xl-2 text-center" id="imagecontainer4">
+                            <div class="col-md-4 col-xl-4 text-center" id="imagecontainer4">
                                 <div class="card md-dark text-white">
-                                    <img class="card-img" src="http://lorempixel.com/output/fashion-q-c-200-200-5.jpg"
+                                    <img class="card-img" src="http://lorempixel.com/output/sports-q-c-200-200-10.jpg"
                                         alt="Card image">
                                     <div class="card-img-overlay">
-                                        <h5 class="card-title">RPG Game</h5>
+                                        <h5 class="card-title">Rutgers Info Widget</h5>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-4 col-xl-2 text-center" id="imagecontainer5">
+                            <div class="col-md-4 col-xl-4 text-center" id="imagecontainer5">
                                 <div class="card md-dark text-white">
-                                    <img class="card-img" src="http://lorempixel.com/output/fashion-q-c-200-200-5.jpg"
+                                    <img class="card-img" src="http://lorempixel.com/output/nightlife-q-c-200-200-10.jpg"
                                         alt="Card image">
                                     <div class="card-img-overlay">
-                                        <h5 class="card-title">RPG Game</h5>
+                                        <h5 class="card-title">Excellent Game</h5>
                                     </div>
                                 </div>
                             </div>
